# energy-bill-calc

./: .eslintignore  .eslintrc  .firebaserc  .gitignore  .prettierrc  _redirects  firebase.json  index.d.ts  index.html  package.json  robots.txt  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
api/: Procfile  client.gen.ts  email-api.ridl  email_api.gen.go  go.mod  go.sum  main.go
config/webpack/: paths.js  rules.js  webpack.common.babel.js  webpack.dev.babel.js  webpack.prod.babel.js
functions/: .gitignore  main.go
src/: index.html  index.tsx
src/assets/scss/: _breakpoints.scss  _fonts.scss  main.scss
src/components/: app.module.scss  app.tsx
src/components/contact-form/: contact-form.module.scss  contact-form.tsx  index.ts
src/components/input/: index.ts  main-input.module.scss  main-input.tsx
src/components/main-form/: index.ts  main-form.module.scss  main-form.tsx
src/components/main-form/left-side-container/: left-side.module.scss  left-side.tsx
src/components/main-form/right-side-container/: right-side.module.scss  right-side.tsx
src/context/: consumption-context.tsx
src/static/: _headers
src/static/fonts/: fonts.css
src/stores/: store.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
